"""
FastAPI REST API for the Ding Doorbell Application

This module provides HTTP REST endpoints that complement the gRPC services.
It's designed to be mobile-friendly and provides easy integration for web clients.

ARCHITECTURE OVERVIEW:
- REST API for mobile clients and web interfaces
- Bridges between HTTP clients and gRPC services
- Handles QR code generation and management
- Provides WebSocket endpoints for real-time notifications
- TODO: Add authentication and authorization middleware
- TODO: Implement rate limiting and request validation
- TODO: Add comprehensive API documentation
"""

import asyncio
import logging
import time
from datetime import datetime
from typing import List, Optional
import qrcode
import io
import base64

from fastapi import FastAPI, HTTPException, BackgroundTasks, WebSocket, WebSocketDisconnect
from fastapi.middleware.cors import CORSMiddleware
from fastapi.responses import JSONResponse

# Import our models
from ..models.schemas import (
    QRCodeScanRequest, QRCodeScanResponse,
    DingResponse, DingResponseResult,
    QRCodeGenerationRequest, QRCodeGenerationResponse,
    NotificationModel, VideoSessionInfo,
    ErrorResponse, HealthCheck
)

# Configure logging
logging.basicConfig(level=logging.INFO)
logger = logging.getLogger(__name__)

# TODO: Load configuration from environment variables
# TODO: Add proper database connection
# TODO: Configure external services (push notifications, etc.)

app = FastAPI(
    title="Ding Doorbell API",
    description="REST API for the Ding doorbell application with QR code scanning and video chat",
    version="0.1.0",
    docs_url="/docs",
    redoc_url="/redoc"
)

# Configure CORS - TODO: Restrict to specific domains in production
app.add_middleware(
    CORSMiddleware,
    allow_origins=["*"],  # TODO: Configure specific origins
    allow_credentials=True,
    allow_methods=["*"],
    allow_headers=["*"],
)

# Application state
# TODO: Replace with proper database and cache
app_state = {
    "start_time": time.time(),
    "qr_codes": {},  # qr_code_id -> metadata
    "sessions": {},  # session_id -> session_data
    "door_owners": {},  # door_owner_id -> owner_data
    "websocket_connections": {},  # door_owner_id -> websocket
}


@app.get("/", response_model=dict)
async def root():
    """Root endpoint with basic API information."""
    return {
        "service": "Ding Doorbell API",
        "version": "0.1.0",
        "description": "REST API for doorbell functionality with QR codes and video chat",
        "docs": "/docs",
        "health": "/health"
    }


@app.get("/health", response_model=HealthCheck)
async def health_check():
    """Health check endpoint for monitoring and load balancers."""
    uptime = int(time.time() - app_state["start_time"])

    # TODO: Add checks for dependent services
    # - gRPC server status
    # - Database connectivity
    # - External service availability

    return HealthCheck(
        status="healthy",
        version="0.1.0",
        uptime_seconds=uptime
    )


@app.post("/scan", response_model=QRCodeScanResponse)
async def scan_qr_code(request: QRCodeScanRequest):
    """
    Handle QR code scanning from mobile devices.

    This endpoint:
    1. Validates the QR code
    2. Creates a new ding session
    3. Sends notification to door owner (via gRPC or WebSocket)
    4. Returns session information to the scanner

    TODO: Add rate limiting per device
    TODO: Implement geolocation validation
    TODO: Add abuse detection and prevention
    """
    logger.info(f"QR code scan request: {request.qr_code_id} from {request.scanner_device_id}")

    # Validate QR code exists
    if request.qr_code_id not in app_state["qr_codes"]:
        raise HTTPException(
            status_code=404,
            detail="QR code not found or expired"
        )

    qr_data = app_state["qr_codes"][request.qr_code_id]
    door_owner_id = qr_data["door_owner_id"]

    # Create new session
    session_id = f"session_{int(time.time())}_{request.scanner_device_id[:8]}"

    session_data = {
        "session_id": session_id,
        "door_owner_id": door_owner_id,
        "scanner_device_id": request.scanner_device_id,
        "qr_code_id": request.qr_code_id,
        "created_at": datetime.now(),
        "status": "pending",
        "scanner_location": request.scanner_location
    }

    app_state["sessions"][session_id] = session_data

    # TODO: Send notification to door owner via gRPC service
    # TODO: Implement WebSocket notification as fallback
    await _notify_door_owner(door_owner_id, session_data)

    return QRCodeScanResponse(
        success=True,
        message="QR code scanned successfully. Door owner has been notified.",
        session_id=session_id,
        door_owner_id=door_owner_id,
        estimated_response_time=30  # TODO: Make this configurable
    )


@app.post("/respond", response_model=DingResponseResult)
async def respond_to_ding(response: DingResponse):
    """
    Handle door owner's response to a ding request.

    When a door owner responds:
    1. Validate the session
    2. Update session status
    3. If accepted, initiate video chat session
    4. Notify the scanner about the response

    TODO: Add authentication for door owners
    TODO: Implement response templates
    TODO: Add automatic response scheduling
    """
    logger.info(f"Ding response: {response.response_type} for session {response.session_id}")

    # Validate session exists
    if response.session_id not in app_state["sessions"]:
        raise HTTPException(
            status_code=404,
            detail="Session not found or expired"
        )

    session_data = app_state["sessions"][response.session_id]

    # Validate door owner
    if session_data["door_owner_id"] != response.door_owner_id:
        raise HTTPException(
            status_code=403,
            detail="Unauthorized to respond to this session"
        )

    # Update session
    session_data["status"] = "responded"
    session_data["response_type"] = response.response_type.value
    session_data["response_message"] = response.custom_message
    session_data["responded_at"] = datetime.now()

    if response.response_type.value == "accept":
        # Create video session
        video_session_id = f"video_{response.session_id}"
        session_data["video_session_id"] = video_session_id
        session_data["status"] = "video_chat_starting"

        # TODO: Initialize video chat session with gRPC video service
        # TODO: Send connection details to both clients

        message = "Ding accepted. Video chat session starting."

        logger.info(f"Video session {video_session_id} created for {response.session_id}")

        return DingResponseResult(
            success=True,
            message=message,
            video_session_id=video_session_id
        )

    else:
        # Request declined
        session_data["status"] = "declined"

        # TODO: Notify scanner about the response

        response_messages = {
            "reject": "Door owner declined the request",
            "busy": "Door owner is busy, please try later",
            "custom": response.custom_message or "Custom response"
        }

        message = response_messages.get(response.response_type.value, "Unknown response")

        return DingResponseResult(
            success=True,
            message=message,
            video_session_id=None
        )


@app.post("/qr-codes", response_model=QRCodeGenerationResponse)
async def generate_qr_code(request: QRCodeGenerationRequest):
    """
    Generate a new QR code for a door owner.

    This endpoint creates a unique QR code that can be printed and placed
    at a door or entrance. When scanned, it will trigger the doorbell flow.

    TODO: Add authentication for door owners
    TODO: Implement QR code expiry and rotation
    TODO: Add usage analytics and tracking
    """
    logger.info(f"QR code generation request for door owner: {request.door_owner_id}")

    # Generate unique QR code ID
    qr_code_id = f"qr_{request.door_owner_id}_{int(time.time())}"

    # Create QR code data - this would be the URL that mobile apps scan
    # TODO: Configure base URL from environment
    qr_data = f"https://ding.app/scan/{qr_code_id}"

    # Generate QR code image
    qr = qrcode.QRCode(
        version=1,
        error_correction=qrcode.constants.ERROR_CORRECT_L,
        box_size=10,
        border=4,
    )
    qr.add_data(qr_data)
    qr.make(fit=True)

    # Create QR code image
    img = qr.make_image(fill_color="black", back_color="white")

    # Convert to base64 for API response
    buffer = io.BytesIO()
    img.save(buffer, format='PNG')
    img_str = base64.b64encode(buffer.getvalue()).decode()
    qr_code_url = f"data:image/png;base64,{img_str}"

    # Store QR code metadata
    qr_metadata = {
        "qr_code_id": qr_code_id,
        "door_owner_id": request.door_owner_id,
        "label": request.label,
        "created_at": datetime.now(),
        "expires_at": request.expiry_date,
        "scan_count": 0,
        "last_scanned": None
    }

    app_state["qr_codes"][qr_code_id] = qr_metadata

    return QRCodeGenerationResponse(
        qr_code_id=qr_code_id,
        qr_code_url=qr_code_url,
        qr_code_data=qr_data,
        created_at=qr_metadata["created_at"],
        expires_at=qr_metadata["expires_at"]
    )


@app.get("/sessions/{session_id}", response_model=VideoSessionInfo)
async def get_session_info(session_id: str):
    """
    Get information about a specific session.

    TODO: Add authentication to restrict access
    TODO: Add session history and analytics
    """
    if session_id not in app_state["sessions"]:
        raise HTTPException(status_code=404, detail="Session not found")

    session_data = app_state["sessions"][session_id]

    return VideoSessionInfo(
        session_id=session_data["session_id"],
        door_owner_id=session_data["door_owner_id"],
        visitor_device_id=session_data["scanner_device_id"],
        status=session_data["status"],
        created_at=session_data["created_at"],
        started_at=session_data.get("started_at"),
        ended_at=session_data.get("ended_at")
    )


@app.websocket("/ws/notifications/{door_owner_id}")
async def websocket_notifications(websocket: WebSocket, door_owner_id: str):
    """
    WebSocket endpoint for real-time notifications to door owners.

    This provides an alternative to gRPC streaming for web clients
    and mobile apps that prefer WebSocket connections.

    TODO: Add authentication and authorization
    TODO: Implement proper error handling and reconnection
    TODO: Add message queuing for offline clients
    """
    await websocket.accept()
    app_state["websocket_connections"][door_owner_id] = websocket

    logger.info(f"WebSocket connection established for door owner: {door_owner_id}")

    try:
        while True:
            # Keep connection alive and handle incoming messages
            # TODO: Implement heartbeat mechanism
            await asyncio.sleep(30)

            # Send heartbeat
            await websocket.send_json({
                "type": "heartbeat",
                "timestamp": datetime.now().isoformat()
            })

    except WebSocketDisconnect:
        logger.info(f"WebSocket disconnected for door owner: {door_owner_id}")
    except Exception as e:
        logger.error(f"WebSocket error for {door_owner_id}: {e}")
    finally:
        # Clean up connection
        app_state["websocket_connections"].pop(door_owner_id, None)


async def _notify_door_owner(door_owner_id: str, session_data: dict):
    """
    Send notification to door owner about a new ding.

    This function tries multiple notification methods:
    1. WebSocket (if connected)
    2. gRPC stream (if available)
    3. Push notification (fallback)

    TODO: Implement proper notification prioritization
    TODO: Add notification delivery confirmation
    TODO: Implement retry logic for failed notifications
    """
    notification = {
        "type": "ding_request",
        "session_id": session_data["session_id"],
        "scanner_device_id": session_data["scanner_device_id"],
        "message": "Someone is at your door and wants to talk!",
        "timestamp": datetime.now().isoformat(),
        "scanner_location": session_data.get("scanner_location")
    }

    # Try WebSocket first
    if door_owner_id in app_state["websocket_connections"]:
        try:
            websocket = app_state["websocket_connections"][door_owner_id]
            await websocket.send_json(notification)
            logger.info(f"WebSocket notification sent to {door_owner_id}")
            return
        except Exception as e:
            logger.error(f"Failed to send WebSocket notification to {door_owner_id}: {e}")
            # Remove failed connection
            app_state["websocket_connections"].pop(door_owner_id, None)

    # TODO: Try gRPC notification stream
    # TODO: Fall back to push notification service

    logger.warning(f"No active notification channel for door owner: {door_owner_id}")


# TODO: Add middleware for request logging
# TODO: Implement authentication middleware
# TODO: Add rate limiting middleware
# TODO: Configure database connections
# TODO: Add background tasks for session cleanup